--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -38,7 +38,6 @@
 
     .room_type_title {
       font-size: 24px;
-      font-family: 微軟正黑體, Microsoft JhengHei, Verdana;
       color: #333333;
       height: 40px;
       line-height: 40px;
@@ -71,7 +70,6 @@
       height: 40px;
       font-size: 19px;
       font-weight: normal;
-      font-family: 微軟正黑體, Microsoft JhengHei, Verdana;
       color: #333333;
       padding-left: 50px;
       padding-top: 15px;
@@ -83,7 +81,6 @@
     .allroomprice_room_description {
       color: #333333;
       font-weight: bold;
-      font-family: "微軟正黑體", "Microsoft JhengHei UI", "新細明體", Arial, HelveticaNeue, sans-serif;
       font-size: 19px;
       padding-left: 15px;
     }
@@ -92,7 +89,6 @@
       width: 440px;
       color: #4d443f;
       font-weight: normal;
-      font-family: "微軟正黑體", "Microsoft JhengHei UI", "新細明體", Arial, HelveticaNeue, sans-serif;
       font-size: 16px;
       line-height: 24px;
       margin-left: 15px;
@@ -102,7 +98,6 @@
     .list_price {
       color: #ff5100;
       font-weight: bold;
-      font-family: Arial;
       font-size: 22px;
       letter-spacing: 1px;
       text-align: -webkit-center;
@@ -198,7 +193,7 @@
         <form
           style="display: flex; flex-wrap: nowrap; flex-direction: row; justify-content: center; justify-content: space-between; ">
           <div>
-            <input style="width:200px;height:40px;margin: 0% 5px;" type="text" name="datefilter" class="form-control"
+            <input style="width:200px;height:40px;margin: 0% 5px;font-size: 13px;" type="text" name="datefilter" class="form-control"
               placeholder="入住時間 ～ 退房時間">
             <!-- <i class="fa fa-calendar glyphicon glyphicon-calendar"></i> -->
             </input>
