--- a/src/main/resources/public/pages/notic.html
+++ b/src/main/resources/public/pages/notic.html
@@ -22,7 +22,16 @@
       display: flex;
       flex-wrap: nowrap;
       align-items: flex-start;
-      margin: 0 0 10px ; 
+      margin: 0 0 10px;
+    }
+
+    h3 {
+      border-left: 5px solid #01546B;
+      font-size: 28px;
+    }
+    .textA {
+      border-bottom: 1px #f3bf07 solid;
+      padding-bottom: 15px;
     }
   </style>
 </head>
@@ -96,15 +105,13 @@
       <!-- main body -->
       <!-- ################################################################################################ -->
       <div class="content" style="display: flex; flex-direction: column;">
-        <div style="padding: 0% 20%;">
-          <img src="../images/room/03.jpg" alt="">
-        </div>
-        <div style="padding: 5% 20% 0% 20%">
-          <p>
-            非常感謝您蒞臨本飯店<br>
+        <p style="font-size: 30px;display: flex;justify-content:center;"><span class="textA">注意事項</span></p><br>
+        <div style="padding: 0% 5%">
+          <p style="font-size: 18px; line-height: 30px; text-align: center;">
+            親愛的貴賓，非常感謝您蒞臨本飯店！<br>
             根據法令規定，下文將為您說明入住時必須特別小心、注意的事項。<br>
-            ※ 煩請您也一併確認本飯店的住宿條款。<br>
-            如有違反住宿條款及下列規約行為，經查屬實，本飯店有可能拒絕您的住宿，敬請注意。<br>
+            如有違反住宿條款及下列規約行為，經查屬實，本飯店有可能拒絕您的住宿，敬請注意。<br><br>
+          <h3>&ensp;利用規約</h3>
           </p>
           <div>
             <table>
@@ -115,8 +122,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>1.請避免對近鄰、
-                    其他住客造成不良影響的行為</td>
+                  <td>1.請避免對其他住客造成不良影響的行為</td>
                   <td>請避免打擾近鄰、其他住客的行為。
                     本飯店建築在構造上與隔壁住宅距離相當近。為了不造成附近居民的困擾，請勿在飯店內或周遭大聲對話或發出過大聲響。
                     ※特別是在晚間 9 點至翌晨 8 點期間，休憩中的住客眾多。敬請特別注意。
