--- a/src/main/resources/public/pages/notic.html
+++ b/src/main/resources/public/pages/notic.html
@@ -33,6 +33,10 @@
       border-bottom: 1px #f3bf07 solid;
       padding-bottom: 15px;
     }
+    td {
+      font-size: 16px;
+      line-height: 28px;
+    }
   </style>
 </head>
 
@@ -115,11 +119,11 @@
           </p>
           <div>
             <table>
-              <thead>
+              <!-- <thead>
                 <tr>
                   <th colspan="2">The table header</th>
                 </tr>
-              </thead>
+              </thead> -->
               <tbody>
                 <tr>
                   <td>1.請避免對其他住客造成不良影響的行為</td>
@@ -142,8 +146,8 @@
                     將毛巾類、衣類物品覆蓋在室內燈或檯燈等照明器具上會成為引發火災的原因。嚴格禁止上述行為。
                 </tr>
                 <tr>
-                  <td>入住期間的注意事項</td>
-                  <td>客房樓層禁止住客之外的人士進入。請至大廳與住客之外的人士會面。
+                  <td style="height: 150px;width: 180px;">4.入住期間的注意事項</td>
+                  <td style="height: 180px;">客房樓層禁止住客之外的人士進入。請至大廳與住客之外的人士會面。
                     禁止男性進入女性專用樓層、女廁；禁止女性進入男廁。一旦透過持續錄影的監視錄影機發現上述行為，會立即向警方通報。
                     除了緊急狀況和經住客要求之外，工作人員不會在住客住宿期間進出客房。每間客房皆可上鎖，請務必將門上鎖，並自行管理貴重物品。若於住宿期間發生失竊情形，恕本飯店概不負責，敬請見諒。
                     ※可是連宿時，為維護環境衛生，工作人員即使不經住客要求，也會每隔 6 天進房清掃、鋪床。
