修改彈出視窗樣式

--- a/src/main/resources/public/frontend/change_password.html
+++ b/src/main/resources/public/frontend/change_password.html
@@ -143,6 +143,8 @@
   <script src="login_static/js/validator.min.js"></script>
   <!-- Custom Js -->
   <script src="login_static/js/main.js"></script>
+  <!-- sweet alert -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script>
     let urlParams = new URLSearchParams(window.location.search);
     console.log(urlParams);
@@ -161,10 +163,10 @@
         data: data,
         headers: { "Content-Type": "application/json;charset=utf8" },
       }).done(function (msg) {
-        alert(msg);
-      }).done(function(){
-        location.href="../index.html"
-      });
+        swal.fire('', msg, 'success').then(function () {
+          location.href = "../index.html"
+        })
+      })
     });
   </script>
 </body>
