--- a/src/main/resources/public/frontend/forgot_password.html
+++ b/src/main/resources/public/frontend/forgot_password.html
@@ -136,6 +136,8 @@
   <script src="login_static/js/validator.min.js"></script>
   <!-- Custom Js -->
   <script src="login_static/js/main.js"></script>
+  <!-- sweet alert -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script>
     // $("#submit_email").click(function () {
     //   // e.preventDefault();
@@ -171,7 +173,13 @@
           $('#loading').css("display", "none");
         }
       }).done(function (msg) {
-        alert(msg);
+        if (msg == "iRelax Hotel已將密碼重置信件寄到您的信箱，請至信箱確認，謝謝。") {
+          swal.fire('', msg, 'success').then(function () {
+            location.href = "../index.html"
+          })
+        } else {
+          swal.fire('', msg, 'error')
+        }
       });
     });
   </script>
