--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -121,11 +121,6 @@
     .swal2-popup {
       font-size: 15.75px !important;
     }
-
-    /* 
-    .belowBtn{
-      color: pink;
-    } */
   </style>
 
 
@@ -373,14 +368,14 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <!-- 日期樣式載入連結 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/moment.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/moment.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     </link>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.css"
       rel="stylesheet">
-    </link>
+    </link> -->
     <!-- sweet alert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script type="text/javascript">
@@ -389,7 +384,8 @@
       $(function () {
         $('input[name="datefilter"]').daterangepicker({
           autoUpdateInput: false,
-
+          dateFormat: "YYYY-MM-DD",
+          minDate: new Date(),
           locale: {
             applyLabel: "確定",
             cancelLabel: "取消",
@@ -401,13 +397,7 @@
             monthNames: ["1月", "2月", "3月", "4月", "5月", "6月",
               "7月", "8月", "9月", "10月", "11月", "12月"],
             firstDay: 1,
-            // applyButtonClasses: (belowBtn),
-          },
-        });
-        $('input[name="startDate"]'), $('input[name="endDate"]'), $('input[name="datefilter"]').daterangepicker({
-          dateFormat: "YYYY-MM-DD",
-          minDate: new Date(),
-          // autoApply: true,
+          }
         });
         $('input[name="datefilter"]').on('apply.daterangepicker', function (ev, picker) {
           $(this).val(picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY'));
