修改導覽列大小＋popup視窗

--- a/src/main/resources/public/frontend/person.html
+++ b/src/main/resources/public/frontend/person.html
@@ -103,6 +103,9 @@
       text-align: -webkit-center;
       vertical-align: middle;
     }
+    .swal2-popup {
+      font-size: 15.75px !important;
+    }
   </style>
   <script src="../assets/js/jquery.js"></script>
   <script>
@@ -122,19 +125,20 @@
 <body id="top">
   <!-- ################################################################################################ -->
   <!-- Top Background Image Wrapper -->
-  <div class="bgded overlay padtop" style="background-image:url('../images/backgrounds/01.png');">
-    <!-- ################################################################################################ -->
+  <div class="bgded overlay padtop" style="background-image:url('images/backgrounds/01.png');">
     <div
       style="height:78.67px; display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;justify-content:flex-end">
       <div id="weather_content">
       </div>&emsp;
       <i class="fas fa-user-circle fa-2x"></i>&nbsp;
-      <nav id="mainav" class="fl_right">
-        <ul id="loginBar" class="clear">
+      <nav id="mainav" class="fl_right" style="font-size:17px;">
+        <ul id="loginBar" class="clear"></ul>
+      </nav>
     </div>
-    <header id="header" class="hoc clear">
+
+    <header id="header" class="hoc clear" style="font-size: 17px;">
       <div id="logo" class="fl_left">
-        <a href="../index.html">
+        <a href="index.html">
           <div style="width: 220px; height: 70px;">
             <img src="images/logo/logo2.png">
           </div>
@@ -145,25 +149,25 @@
           <li class="active"><a href="../index.html">首頁</a></li>
           <li><a class="drop">關於我們</a>
             <ul>
-              <li><a href="/pages/intro.html">簡介</a></li>
-              <li><a href="/pages/traffic.html">交通資訊</a></li>
-              <li><a href="/pages/notic.html">注意事項</a></li>
+              <li><a href="pages/intro.html">簡介</a></li>
+              <li><a href="pages/traffic.html">交通資訊</a></li>
+              <li><a href="pages/notic.html">注意事項</a></li>
             </ul>
           </li>
           <li><a class="drop">最新消息</a>
             <ul>
-              <li><a href="/pages/news.html">活動情報</a></li>
-              <li><a href="/pages/discount.html">住房優惠</a></li>
+              <li><a href="pages/news.html">活動情報</a></li>
+              <li><a href="pages/discount.html">住房優惠</a></li>
             </ul>
           </li>
           <li><a class="drop">瀏覽房型</a>
             <ul>
-              <li><a href="/pages/room.html">房型一覽</a></li>
-              <li><a href="/pages/booking.html">立即訂房</a></li>
+              <li><a href="pages/room.html">房型一覽</a></li>
+              <li><a href="pages/booking.html">立即訂房</a></li>
             </ul>
           </li>
-          <li><a href="/pages/facility.html">活動設施</a></li>
-          <li><a href="/pages/contactUS.html">聯絡我們</a></li>
+          <li><a href="pages/facility.html">活動設施</a></li>
+          <li><a href="pages/contactUS.html">聯絡我們</a></li>
         </ul>
       </nav>
     </header>
