--- a/src/main/resources/public/pages/intro.html
+++ b/src/main/resources/public/pages/intro.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
+
 <html lang="">
 
 <head>
   <title>iRelax Hotel | 關於我們 | 簡介</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
     integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
     crossorigin="anonymous"></script>
-  <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-  <!-- 輪播CDN -->
+  <!-- 日期的CSS -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+  <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"
+    rel="stylesheet" />
+  <!-- //日期的CSS -->
   <style>
     .slideshow {
       position: relative;
@@ -57,8 +63,6 @@
     }
   </style>
   <script src="../assets/js/jquery.js"></script>
-  <script src="../layout/scripts/CheckLogin.js"></script>
-
 </head>
 
 <body id="top">
@@ -261,10 +265,6 @@
   <script src="../layout/scripts/jquery.min.js"></script>
   <script src="../layout/scripts/jquery.backtotop.js"></script>
   <script src="../layout/scripts/jquery.mobilemenu.js"></script>
-  <!-- 天氣 -->
-  <script src="../layout/scripts/Weather.js"></script>
-  <!-- 公車 -->
-  <script src="../layout/scripts/TDXBus.js"></script>
   <!-- 輪播js -->
   <script>
     $('.slideshow').each(function () {
@@ -286,6 +286,11 @@
       }
     })
   </script>
+  <!-- 天氣＋會員登入 -->
+  <script src="../layout/scripts/Weather.js"></script>
+  <script src="../layout/scripts/CheckLogin.js"></script>
+  <!-- 公車 -->
+  <script src="../layout/scripts/TDXBus.js"></script>
 </body>
 
 </html>
