--- a/src/main/resources/public/pages/discount.html
+++ b/src/main/resources/public/pages/discount.html
@@ -17,6 +17,11 @@
     rel="stylesheet" />
   <!-- //日期的CSS -->
   <style>
+    a {
+      color: #f3bf07;
+      text-decoration: none;
+    }
+
     h3 {
       border-left: 5px solid #01546B;
     }
