--- a/src/main/resources/public/pages/room.html
+++ b/src/main/resources/public/pages/room.html
@@ -17,6 +17,11 @@
     rel="stylesheet" />
   <!-- //日期的CSS -->
   <style>
+    a {
+      color: #f3bf07;
+      text-decoration: none;
+    }
+    
     .room_img {
       display: block;
       width: 600px;
