--- a/src/main/resources/public/pages/contactUS.html
+++ b/src/main/resources/public/pages/contactUS.html
@@ -17,6 +17,11 @@
     rel="stylesheet" />
   <!-- //日期的CSS -->
   <style>
+    a {
+      color: #f3bf07;
+      text-decoration: none;
+    }
+
     .gender {
       width: 100px;
       display: inline-block;
